# CMakeAndroidApk

./: readme.md
src/: AndroidManifest.xml  CMakeLists.txt  androidsign.keystore  main.cpp
